// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Page /notification > { locale: "en" } snapshot test > ({ loading: true }) renders loading state 1`] = `
<section
  class="section"
>
  <div
    class="b-skeleton is-animated"
  >
    <div
      class="b-skeleton-item is-rounded"
    />
  </div>
  <div
    class="b-skeleton is-animated"
  >
    <div
      class="b-skeleton-item is-rounded"
    />
  </div>
  <div
    class="b-skeleton is-animated"
  >
    <div
      class="b-skeleton-item is-rounded"
    />
  </div>
</section>
`;

exports[`Page /notification > { locale: "en" } snapshot test > ({ messages: [...] }) renders notification 1`] = `
<section
  class="section"
>
  <h1
    class="title"
  >
    All Notification List
  </h1>
  <section>
    <div
      class="b-table"
    >
      <div
        style="display: none;"
      >
        
        <span
          data-id="1"
        />
        <span
          data-id="2"
        >
          Title
        </span>
        <span
          data-id="3"
        >
          Date
        </span>
        <span
          data-id="4"
        >
          Edit
        </span>
        
      </div>
      <!--v-if-->
      <!--v-if-->
      <div
        class="table-wrapper"
      >
        <table
          class="table is-striped"
        >
          <!--v-if-->
          <thead>
            
            
            <tr>
              <th
                class="th-chevron-cell"
              />
              <!--v-if-->
              
              <th
                class=""
                draggable="false"
              >
                <span>
                   
                  <span
                    class="th-wrap sort-icon"
                    style="display: none;"
                  >
                    <span
                      class="icon is-small"
                    >
                      <i
                        class="mdi mdi-arrow-up"
                      />
                    </span>
                  </span>
                </span>
              </th>
              <th
                class=""
                draggable="false"
              >
                <span>
                  Title 
                  <span
                    class="th-wrap sort-icon"
                    style="display: none;"
                  >
                    <span
                      class="icon is-small"
                    >
                      <i
                        class="mdi mdi-arrow-up"
                      />
                    </span>
                  </span>
                </span>
              </th>
              <th
                class=""
                draggable="false"
              >
                <span>
                  Date 
                  <span
                    class="th-wrap sort-icon"
                    style="display: none;"
                  >
                    <span
                      class="icon is-small"
                    >
                      <i
                        class="mdi mdi-arrow-up"
                      />
                    </span>
                  </span>
                </span>
              </th>
              
              <!--v-if-->
            </tr>
            <!--v-if-->
            <!--v-if-->
          </thead>
          <tbody>
            
            
            <tr
              class=""
              draggable="false"
            >
              <td
                class="chevron-cell"
              >
                <span
                  class="icon is-clickable"
                  role="button"
                >
                  <i
                    class="mdi mdi-chevron-right mdi-24px"
                  />
                </span>
              </td>
              <!--v-if-->
              
              <td
                class=""
              >
                <button
                  class="button is-info"
                  type="button"
                >
                  <span
                    class="button-wrapper"
                  >
                    <span
                      class="icon"
                    >
                      <i
                        class="mdi mdi-info mdi-24px"
                      />
                    </span>
                    <!--v-if-->
                    <!--v-if-->
                  </span>
                </button>
              </td>
              <td
                class=""
                data-label="Title"
              >
                新曲を追加しました
              </td>
              <td
                class=""
                data-label="Date"
              >
                Thu, 13 Aug 2020 00:00:00 GMT
              </td>
              
              <!--v-if-->
            </tr>
            <transition-stub
              appear="false"
              css="true"
              name=""
              persisted="false"
            >
              <!--v-if-->
            </transition-stub>
            <!--v-if-->
            
            
            <tr
              class=""
              draggable="false"
            >
              <td
                class="chevron-cell"
              >
                <span
                  class="icon is-clickable"
                  role="button"
                >
                  <i
                    class="mdi mdi-chevron-right mdi-24px"
                  />
                </span>
              </td>
              <!--v-if-->
              
              <td
                class=""
              >
                <button
                  class="button is-warning"
                  type="button"
                >
                  <span
                    class="button-wrapper"
                  >
                    <span
                      class="icon"
                    >
                      <i
                        class="mdi mdi-warning mdi-24px"
                      />
                    </span>
                    <!--v-if-->
                    <!--v-if-->
                  </span>
                </button>
              </td>
              <td
                class=""
                data-label="Title"
              >
                このサイトはベータ版です
              </td>
              <td
                class=""
                data-label="Date"
              >
                Sat, 01 Aug 2020 03:00:00 GMT
              </td>
              
              <!--v-if-->
            </tr>
            <transition-stub
              appear="false"
              css="true"
              name=""
              persisted="false"
            >
              <!--v-if-->
            </transition-stub>
            <!--v-if-->
            
            
            <tr
              class=""
              draggable="false"
            >
              <td
                class="chevron-cell"
              >
                <span
                  class="icon is-clickable"
                  role="button"
                >
                  <i
                    class="mdi mdi-chevron-right mdi-24px"
                  />
                </span>
              </td>
              <!--v-if-->
              
              <td
                class=""
              >
                <button
                  class="button is-info"
                  type="button"
                >
                  <span
                    class="button-wrapper"
                  >
                    <span
                      class="icon"
                    >
                      <i
                        class="mdi mdi-info mdi-24px"
                      />
                    </span>
                    <!--v-if-->
                    <!--v-if-->
                  </span>
                </button>
              </td>
              <td
                class=""
                data-label="Title"
              >
                v0.6.0をリリースしました
              </td>
              <td
                class=""
                data-label="Date"
              >
                Tue, 11 Aug 2020 03:00:00 GMT
              </td>
              
              <!--v-if-->
            </tr>
            <transition-stub
              appear="false"
              css="true"
              name=""
              persisted="false"
            >
              <!--v-if-->
            </transition-stub>
            <!--v-if-->
            
            
            <!--v-if-->
          </tbody>
          <!--v-if-->
        </table>
        
        <transition-stub
          appear="false"
          css="true"
          name="fade"
          persisted="false"
        >
          <!--v-if-->
        </transition-stub>
        
      </div>
      
      <div
        class="level"
      >
        <div>
          
          
        </div>
        <div>
          <div>
            <nav
              class="pagination is-right"
            >
              <a
                aria-current="false"
                class="pagination-link pagination-previous is-disabled pagination-previous is-disabled"
                href="#"
                role="button"
              >
                
                <span
                  aria-hidden="true"
                  class="icon"
                >
                  <i
                    class="mdi mdi-chevron-left mdi-24px"
                  />
                </span>
                
              </a>
              <a
                aria-current="false"
                class="pagination-link pagination-next is-disabled pagination-next is-disabled"
                href="#"
                role="button"
              >
                
                <span
                  aria-hidden="true"
                  class="icon"
                >
                  <i
                    class="mdi mdi-chevron-right mdi-24px"
                  />
                </span>
                
              </a>
              <ul
                class="pagination-list"
              >
                <!--First-->
                <!--v-if-->
                <!--v-if-->
                <!--Pages-->
                
                <li>
                  <a
                    aria-current="true"
                    class="pagination-link is-current"
                    href="#"
                    role="button"
                  >
                    
                    1
                    
                  </a>
                </li>
                
                <!--Last-->
                <!--v-if-->
                <!--v-if-->
              </ul>
            </nav>
          </div>
        </div>
      </div>
      
    </div>
  </section>
</section>
`;

exports[`Page /notification > { locale: "en" } snapshot test > ({ messages: [] }) renders no notification 1`] = `
<section
  class="section"
>
  <div
    class="content has-text-grey has-text-centered"
  >
    <p>
      No Data
    </p>
  </div>
</section>
`;

exports[`Page /notification > { locale: "ja" } snapshot test > ({ loading: true }) renders loading state 1`] = `
<section
  class="section"
>
  <div
    class="b-skeleton is-animated"
  >
    <div
      class="b-skeleton-item is-rounded"
    />
  </div>
  <div
    class="b-skeleton is-animated"
  >
    <div
      class="b-skeleton-item is-rounded"
    />
  </div>
  <div
    class="b-skeleton is-animated"
  >
    <div
      class="b-skeleton-item is-rounded"
    />
  </div>
</section>
`;

exports[`Page /notification > { locale: "ja" } snapshot test > ({ messages: [...] }) renders notification 1`] = `
<section
  class="section"
>
  <h1
    class="title"
  >
    お知らせ一覧
  </h1>
  <section>
    <div
      class="b-table"
    >
      <div
        style="display: none;"
      >
        
        <span
          data-id="1"
        />
        <span
          data-id="2"
        >
          タイトル
        </span>
        <span
          data-id="3"
        >
          投稿日時
        </span>
        <span
          data-id="4"
        >
          Edit
        </span>
        
      </div>
      <!--v-if-->
      <!--v-if-->
      <div
        class="table-wrapper"
      >
        <table
          class="table is-striped"
        >
          <!--v-if-->
          <thead>
            
            
            <tr>
              <th
                class="th-chevron-cell"
              />
              <!--v-if-->
              
              <th
                class=""
                draggable="false"
              >
                <span>
                   
                  <span
                    class="th-wrap sort-icon"
                    style="display: none;"
                  >
                    <span
                      class="icon is-small"
                    >
                      <i
                        class="mdi mdi-arrow-up"
                      />
                    </span>
                  </span>
                </span>
              </th>
              <th
                class=""
                draggable="false"
              >
                <span>
                  タイトル 
                  <span
                    class="th-wrap sort-icon"
                    style="display: none;"
                  >
                    <span
                      class="icon is-small"
                    >
                      <i
                        class="mdi mdi-arrow-up"
                      />
                    </span>
                  </span>
                </span>
              </th>
              <th
                class=""
                draggable="false"
              >
                <span>
                  投稿日時 
                  <span
                    class="th-wrap sort-icon"
                    style="display: none;"
                  >
                    <span
                      class="icon is-small"
                    >
                      <i
                        class="mdi mdi-arrow-up"
                      />
                    </span>
                  </span>
                </span>
              </th>
              
              <!--v-if-->
            </tr>
            <!--v-if-->
            <!--v-if-->
          </thead>
          <tbody>
            
            
            <tr
              class=""
              draggable="false"
            >
              <td
                class="chevron-cell"
              >
                <span
                  class="icon is-clickable"
                  role="button"
                >
                  <i
                    class="mdi mdi-chevron-right mdi-24px"
                  />
                </span>
              </td>
              <!--v-if-->
              
              <td
                class=""
              >
                <button
                  class="button is-info"
                  type="button"
                >
                  <span
                    class="button-wrapper"
                  >
                    <span
                      class="icon"
                    >
                      <i
                        class="mdi mdi-info mdi-24px"
                      />
                    </span>
                    <!--v-if-->
                    <!--v-if-->
                  </span>
                </button>
              </td>
              <td
                class=""
                data-label="タイトル"
              >
                新曲を追加しました
              </td>
              <td
                class=""
                data-label="投稿日時"
              >
                Thu, 13 Aug 2020 00:00:00 GMT
              </td>
              
              <!--v-if-->
            </tr>
            <transition-stub
              appear="false"
              css="true"
              name=""
              persisted="false"
            >
              <!--v-if-->
            </transition-stub>
            <!--v-if-->
            
            
            <tr
              class=""
              draggable="false"
            >
              <td
                class="chevron-cell"
              >
                <span
                  class="icon is-clickable"
                  role="button"
                >
                  <i
                    class="mdi mdi-chevron-right mdi-24px"
                  />
                </span>
              </td>
              <!--v-if-->
              
              <td
                class=""
              >
                <button
                  class="button is-warning"
                  type="button"
                >
                  <span
                    class="button-wrapper"
                  >
                    <span
                      class="icon"
                    >
                      <i
                        class="mdi mdi-warning mdi-24px"
                      />
                    </span>
                    <!--v-if-->
                    <!--v-if-->
                  </span>
                </button>
              </td>
              <td
                class=""
                data-label="タイトル"
              >
                このサイトはベータ版です
              </td>
              <td
                class=""
                data-label="投稿日時"
              >
                Sat, 01 Aug 2020 03:00:00 GMT
              </td>
              
              <!--v-if-->
            </tr>
            <transition-stub
              appear="false"
              css="true"
              name=""
              persisted="false"
            >
              <!--v-if-->
            </transition-stub>
            <!--v-if-->
            
            
            <tr
              class=""
              draggable="false"
            >
              <td
                class="chevron-cell"
              >
                <span
                  class="icon is-clickable"
                  role="button"
                >
                  <i
                    class="mdi mdi-chevron-right mdi-24px"
                  />
                </span>
              </td>
              <!--v-if-->
              
              <td
                class=""
              >
                <button
                  class="button is-info"
                  type="button"
                >
                  <span
                    class="button-wrapper"
                  >
                    <span
                      class="icon"
                    >
                      <i
                        class="mdi mdi-info mdi-24px"
                      />
                    </span>
                    <!--v-if-->
                    <!--v-if-->
                  </span>
                </button>
              </td>
              <td
                class=""
                data-label="タイトル"
              >
                v0.6.0をリリースしました
              </td>
              <td
                class=""
                data-label="投稿日時"
              >
                Tue, 11 Aug 2020 03:00:00 GMT
              </td>
              
              <!--v-if-->
            </tr>
            <transition-stub
              appear="false"
              css="true"
              name=""
              persisted="false"
            >
              <!--v-if-->
            </transition-stub>
            <!--v-if-->
            
            
            <!--v-if-->
          </tbody>
          <!--v-if-->
        </table>
        
        <transition-stub
          appear="false"
          css="true"
          name="fade"
          persisted="false"
        >
          <!--v-if-->
        </transition-stub>
        
      </div>
      
      <div
        class="level"
      >
        <div>
          
          
        </div>
        <div>
          <div>
            <nav
              class="pagination is-right"
            >
              <a
                aria-current="false"
                class="pagination-link pagination-previous is-disabled pagination-previous is-disabled"
                href="#"
                role="button"
              >
                
                <span
                  aria-hidden="true"
                  class="icon"
                >
                  <i
                    class="mdi mdi-chevron-left mdi-24px"
                  />
                </span>
                
              </a>
              <a
                aria-current="false"
                class="pagination-link pagination-next is-disabled pagination-next is-disabled"
                href="#"
                role="button"
              >
                
                <span
                  aria-hidden="true"
                  class="icon"
                >
                  <i
                    class="mdi mdi-chevron-right mdi-24px"
                  />
                </span>
                
              </a>
              <ul
                class="pagination-list"
              >
                <!--First-->
                <!--v-if-->
                <!--v-if-->
                <!--Pages-->
                
                <li>
                  <a
                    aria-current="true"
                    class="pagination-link is-current"
                    href="#"
                    role="button"
                  >
                    
                    1
                    
                  </a>
                </li>
                
                <!--Last-->
                <!--v-if-->
                <!--v-if-->
              </ul>
            </nav>
          </div>
        </div>
      </div>
      
    </div>
  </section>
</section>
`;

exports[`Page /notification > { locale: "ja" } snapshot test > ({ messages: [] }) renders no notification 1`] = `
<section
  class="section"
>
  <div
    class="content has-text-grey has-text-centered"
  >
    <p>
      データがありません
    </p>
  </div>
</section>
`;
